k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  type: ClusterIP          # Ingress will expose it externally
  selector:
    app: wisecow
  ports:
    - name: http
      port: 80             # Service port
      targetPort: 4499     # Container port
      protocol: TCP
